--- a/app/views/courses/_wikis.html.erb
+++ b/app/views/courses/_wikis.html.erb
@@ -3,16 +3,9 @@
   tinymce.init({
     selector: '#wiki_editor', 
     theme: 'inlite',
-    plugins: 'image table link paste contextmenu textpattern autolink',
     insert_toolbar: 'quickimage quicktable',
     selection_toolbar: 'bold italic | quicklink h2 h3 blockquote',
-    inline: true,
-    paste_data_images: true,
-    //forced_root_block : false,
-    content_css: [
-      'https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i',
-      'https://www.tinymce.com/css/codepen.min.css'    
-    ]
+    inline: true
   });
 </script>
 <% wiki = @course.recent_wiki %>
