--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -17,7 +17,7 @@
           <%= @current_user.point %> 점
         </a>
 
-        <ul><li><a href="#0">강의평 하나당 300 점이<br>적립됩니다!</a></li></ul>
+        <ul><li><a href="#0"><%= t "point.notice" %></a></li></ul>
       </li>
 
       <li class="has-children lec_open nvs">
