--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,3 +1,4 @@
+<% include Rails.application.routes.url_helpers %>
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
