--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -46,27 +46,27 @@
               <span class="info_title">학점</span> <%= @course.lecture.unit %>학점
             </p>
             <p class="info_3">
-              <span class="info_title">같은 강의</span>
+              <span class="info_title"><%= (t"course.identical") %></span>
               <% if !@identical_courses.present? %>
-                  같은 강의가 없습니다
+                  <%= (t"course.identical") %>가 없습니다
               <% else %>
                   <% @other_course = [] %>
                   <% @identical_courses.each do |id| %>
                       <% @other_course << Course.find(id) %>
                   <% end %>
-                  <%= select_tag 'identical', options_for_select(  @other_course.collect{ |u| [u.lecture.name+"("+u.professor.name+")", u.id] }.insert(0, [@msg,@msg])  ), selected: @msg, onchange: "window.location.replace('/courses/'+this.value);" %>
+                  <%= select_tag 'identical', options_for_select(  @other_course.collect{ |u| [u.lecture.name+"("+u.professor.name+")", u.id] }.insert(0, [(t"course.choose"),(t"course.choose")])), selected: (t"course.choose"), onchange: "window.location.replace('/courses/'+this.value);" %>
               <% end %>
             </p>
             <p class="info_4">
-              <span class="info_title">연관 강의</span>
+              <span class="info_title"><%= (t"course.related") %></span>
               <% if !@related_courses.present? %>
-                  연관 강의가 없습니다
+                  <%= (t"course.related") %>가 없습니다
               <% else %>
                   <% @other_course = [] %>
                   <% @related_courses.each do |id| %>
                     <% @other_course << Course.find(id) %>
                   <% end %>
-                  <%= select_tag 'related', options_for_select(  @other_course.collect{ |u| [u.lecture.name+"("+u.professor.name+")", u.id] }.insert(0, [@msg,@msg])  ), selected: @msg, onchange: "window.location.replace('/courses/'+this.value);" %>
+                  <%= select_tag 'related', options_for_select(  @other_course.collect{ |u| [u.lecture.name+"("+u.professor.name+")", u.id] }.insert(0, [(t"course.choose"),(t"course.choose")])  ), selected: (t"course.choose"), onchange: "window.location.replace('/courses/'+this.value);" %>
               <% end %>
             </p>
           </div><%#////info_p_div%>
@@ -106,7 +106,7 @@
         <li class="filter">
           <%# partial refresh needed %>
           <%= form_tag do %>
-              <%= select_tag 'order', options_for_select(['최신순','총점순','총점역순'], @params), onchange: "$('#order').submit();" %>
+              <%= select_tag 'order', options_for_select({"최신순" => 1, "좋아요만" => 2, "싫어요만" => 3}, @params), onchange: "$('#order').submit();" %>
           <% end %>
         </li>
       </ul>
