--- a/app/views/account_activations/retry_activation.erb
+++ b/app/views/account_activations/retry_activation.erb
@@ -7,7 +7,7 @@
         <p class="logo">인증메일 재발송</p>
         <p class="main_msg">회원가입 시 이용한 이메일 주소를 입력해주세요.</p>
 
-        <%= form_for(:re_authMail, url: "/signup/resend_authMail", method: "post") do |f|%>
+        <%= form_for(:re_authMail, url: "/retry_activation", method: "post") do |f|%>
             <div class="input_group login_input email_input">
               <div class="full_input input_div">
                 <%# 만약 mail페이지에서 넘어오면, 해당 이메일 정보를 미리 채워주는 식으로 구현 %>
