--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,4 +1,3 @@
-<% include Rails.application.routes.url_helpers %>
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -11,7 +10,7 @@
     아래 버튼을 눌러, 이메일 인증을 해주시면 가입이 완료됩니다.<br>
     이제 <%= Evaluation.count %>개의 강의평가는 당신의 것!</p>
 
-    <a href="<%= ENV["MAIL_HOST_WITH_PORT"] %>/account_activations/<%= @user.activation_token %>/edit?email=<%= @user.email %>">이메일 인증하기</a>
+    <a href="<%= ENV["MAIL_HOST_WITH_PORT"] %>/activate/<%= @at.token %>">이메일 인증하기</a>
 
     <p>love from classlion</p>
     <p><a href="http://classlion.net">classlion.net</a></p>
