--- a/app/views/courses/_like_form.html.erb
+++ b/app/views/courses/_like_form.html.erb
@@ -1,44 +1,56 @@
-<%= t "like_form.like" %>
 <% if @current_user %>
   <%= hidden_field_tag 'c_id', @course.id %>
 
   <%# 좋아요가 아예 없는 경우, 좋아요 %>
   <% if !(Like.exists?(course_id: @course.id, user_id: @current_user.id)) %>
-      <%= button_tag class: 'like_btn', id: 'like_create_btn' do %>
-        <i class="fa fa-heart not_favorite" aria-hidden="true"></i>
-      <% end %>
+    <%= button_tag class: 'like_btn', id: 'like_create_btn' do %>
+      <img src="/assets/thumbs_up_ox.svg">
+      <%= t "like_form.like" %>
+      <i class="fa fa-heart not_favorite" aria-hidden="true"></i>
+    <% end %>
 
   <%# 좋아요가 눌린 경우 %>
   <% elsif (Like.find_by(course_id: @course.id, user_id: @current_user.id)).is_like == true %>
       <%= button_tag class: 'like_btn', id: 'like_delete_btn' do %>
-        <i class="fa fa-heart favorite" aria-hidden="true"></i>
+        <img src="/assets/thumbs_up_ox.svg">
+        <%= t "like_form.like" %>
+        <i class="fa fa-heart not_favorite" aria-hidden="true"></i>
       <% end %>
 
   <%# 싫어요가 눌린 경우 %>
   <% else %>
       <%= button_tag class: 'like_btn', id: 'like_create_dislike_delete_btn' do %>
+          <img src="/assets/thumbs_up_ox.svg">
+          <%= t "like_form.like" %>
           <i class="fa fa-heart not_favorite" aria-hidden="true"></i>
       <% end %>
   <% end %>
 <% end %>
 
-<%= t "like_form.dislike" %>
 <% if @current_user %>
     <%= hidden_field_tag 'c_id', @course.id %>
     <%# 좋아요가 아예 없는 경우, 싫어요 %>
     <% if !(Like.exists?(course_id: @course.id, user_id: @current_user.id)) %>
         <%= button_tag class: 'dislike_btn', id: 'dislike_create_btn' do %>
+            <img src="/assets/thumbs_down_ox.svg">
+            <%= t "like_form.dislike" %>
             <i class="fa fa-heart not_favorite" aria-hidden="true"></i>
         <% end %>
-        <%# 좋아요가 눌린 경우 %>
+        
+    <%# 좋아요가 눌린 경우 %>
     <% elsif (Like.find_by(course_id: @course.id, user_id: @current_user.id)).is_like == false %>
         <%= button_tag class: 'dislike_btn', id: 'dislike_delete_btn' do %>
+            <img src="/assets/thumbs_down_ox.svg">
+            <%= t "like_form.dislike" %>
             <i class="fa fa-heart favorite" aria-hidden="true"></i>
         <% end %>
-        <%# 싫어요가 눌린 경우 %>
+        
+    <%# 싫어요가 눌린 경우 %>
     <% else %>
         <%= button_tag class: 'dislike_btn', id: 'dislike_create_like_delete_btn' do %>
-            <i class="fa fa-heart not_favorite" aria-hidden="true"></i>
+          <img src="/assets/thumbs_down_ox.svg">
+          <%= t "like_form.dislike" %>
+          <i class="fa fa-heart not_favorite" aria-hidden="true"></i>
         <% end %>
     <% end %>
 <% end %>
