--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -106,10 +106,10 @@
             강의평가
           </a>
         </li>
-        <li id="filter" class="filter">
+        <li id= "filter" class="filter">
           <%# partial refresh needed %>
           <%= form_tag do %>
-              <%= select_tag 'order', options_for_select(['최신순','총점순','총점역순'], @params), onchange: "$('#order').submit();" %>
+              <%= select_tag 'order', options_for_select({"최신순" => 1, "좋아요만" => 2, "싫어요만" => 3}, @params), onchange: "$('#order').submit();" %>
           <% end %>
         </li>
       </ul>
